# OpenEvals

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark_suite.yml  bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/openevals_api/: __init__.py  config.py  database.py  github.py  main.py  models.py  schemas.py  security.py  worker.py
backend/openevals_api/services/: __init__.py  core.py  runs.py
backend/openevals_runner/: __init__.py  assertions.py  cli.py  executor.py  junit.py  openai_client.py  parser.py  scoring.py  suite_models.py  templates.py
backend/tests/: test_executor.py  test_parser.py  test_scoring.py
docs/: launch-playbook.md
examples/suites/: README.md  structured-extraction.yaml  summarization-clarity.yaml  support-routing.yaml
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: main.tsx  router.tsx
frontend/src/components/: AppLayout.tsx  MetricCard.tsx  SectionCard.tsx  StatusPill.tsx
frontend/src/lib/: api.ts  starterSuite.ts  types.ts  utils.ts
frontend/src/routes/: home.tsx  new-suite.tsx  run.tsx  suite.tsx
frontend/src/styles/: globals.css
